waybar layout & styling

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,34 +1,50 @@
-@define-color foreground #e6d8ba;
-@define-color background #11221C;
-@define-color highlight #71CEAD;
+@import "theme.css";
 
 * {
-  font-family: JetBrainsMono;
-  font-size: 13px;
+  all: initial;
+  color: @fg-sage-light;
 }
 
-window#waybar {
-  background-color: alpha(@background, 0.7);
-  color: @foreground;
+@import "styles/fonts.css";
+@import "styles/modules-center.css";
+@import "styles/modules-left.css";
+@import "styles/modules-right.css";
+@import "styles/states.css";
 
+.module {
+  margin-bottom: -1px;
+}
+
+#waybar {
+  background-color: transparent;
   border-radius: 8px;
 }
 
-#workspaces button {
-  padding: 5px;
-  color: #cdd6f4;
+.modules-left,
+.modules-center,
+.modules-right {
+  background-color: alpha(@main-bg, 0.5);
+  border-radius: 8px;
+  padding: 4px;
 }
 
-#workspaces button.active {
-  background-color: @highlight;
-  color: @background;
+button {
+  min-width: 16px;
+  padding: 0 8px;
 }
 
-#clock, #battery, #network, #cpu, #memory {
-  padding: 0 10px;
+button:hover label{
+  color: @fg-hover-glow;
+  text-shadow: 0 0 2px @glow-hover-warm;
+  text-shadow: 0 0 3px alpha(@glow-hover-warm, 0.6);
 }
 
-#tray {
-  padding-right: 8px;
-  margin-right: 5px;
+tooltip {
+  border: 2px solid @fg-main;
+  background-color: @main-bg;
+  border-radius: 8px;
+}
+
+tooltip > box {
+  padding: 0 6px;
 }
